--- a/app/src/main/res/drawable/drawableleftfooter_layer.xml
+++ b/app/src/main/res/drawable/drawableleftfooter_layer.xml
@@ -2,7 +2,9 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:drawable="@drawable/logosmada"
-        android:width="50dp"
-        android:height="60dp"
-        />
+
+        android:height="30dp"
+        android:width="25dp">
+
+    </item>
 </layer-list>
