--- a/app/src/main/res/drawable/headerlogin.xml
+++ b/app/src/main/res/drawable/headerlogin.xml
@@ -2,17 +2,17 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="#00B4D8"/>
+        android:color="@color/accent4"/>
 
     <padding
         android:bottom="5dp"
         android:left="5dp"
         android:right="5dp"
         android:top="5dp"/>
-    <corners
+    <!--<corners
         android:topLeftRadius="0.1dp"
         android:topRightRadius="0.1dp"
-        android:bottomLeftRadius="100dp"
-        android:bottomRightRadius="100dp"
-        />
+        android:bottomLeftRadius="50dp"
+        android:bottomRightRadius="50dp"
+        /> -->
 </shape>
