--- a/app/src/main/res/drawable/login_bg1.xml
+++ b/app/src/main/res/drawable/login_bg1.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#50FFFFFF"/>
-    <stroke android:width="3dp" android:color="@android:color/transparent" />
-    <corners android:radius="10dp"/>
-    <padding android:left="5dp" android:top="5dp" android:right="5dp" android:bottom="5dp" />
+    <solid android:color="@color/accent2"/>
+    <stroke android:width="3dp"
+        android:color="@android:color/transparent" />
+    <corners android:radius="20dp"/>
+    <padding android:left="5dp"
+        android:top="5dp"
+        android:right="5dp"
+        android:bottom="5dp" />
 </shape>
