--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="accent3">#23C3CB</color>
-    <color name="ETOutlineACTIVE1">#FFFFFFFF</color>
-    <color name="ETOutlineINACTIVE1">#48CAE4</color>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <color name="colorPrimaryDark">#50FFFFFF</color>
+    <color name="accent1">#03045E</color>
+    <color name="accent2">#023E8A</color>
+    <color name="accent3">#0077B6</color>
+    <color name="accent4">#0096C7</color>
+    <color name="accent5">#00B4D8</color>
+    <color name="accent6">#48CAE4</color>
+    <color name="accent7">#ADE8F4</color>
+    <color name="accent8">#CAF0F8</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="text1">#ADE8F4</color>
     <color name="texthint1">#00B4D8</color>
     <color name="textlink1">#0077B6</color>
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">#FFF</color>
 </resources>
